<resources>
    <string name="app_name">Travel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="name_user">Hi, Andhi Ratobing</string>
    <string name="image_notification">Image Notification</string>
    <string name="where_do_you_want_to_go">Where do you want to go?</string>
    <string name="notification">Notification</string>
    <string name="categories" translatable="false">Categories</string>
    <string name="top_trips">Top trips</string>
    <string name="explore">Explore</string>
    <string name="_120">$120</string>
    <string name="banjir_kanal">Banjir Kanal</string>
    <string name="camp">Camp</string>


    <string name="tabLayoutMountains">Mountains</string>
    <string name="tabLayoutBeaches">Beaches</string>
    <string name="tabLayoutTemple">Temple</string>
    <string name="tabLayoutMuseum">Museum</string>
    <string name="account">Account</string>

    <string-array name="data_name_categroy1">
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Mountains</item>
    </string-array>


    <string-array name="data_name_montains">
        <item>Rinjani Mount</item>
        <item>Bromo Mount</item>
        <item>Ijen Mount</item>
        <item>Merapi Mount</item>
        <item>Semeru Mount</item>
        <item>Prau Mount</item>
        <item>Merbabu Mount</item>
        <item>Papandayan Mount</item>
        <item>Kelimutu Mount</item>
        <item>Sumbing Mount</item>
        <item>Sindoro Mount</item>
        <item>Kerinji Mount</item>
        <item>Lawu Mount</item>
        <item>Puncak Jaya Mount</item>
    </string-array>

    <integer-array name="data_image_location_montains">
        <item>@drawable/gunung_rinjani</item>
        <item>@drawable/gunung_bromo</item>
        <item>@drawable/gunung_ijen</item>
        <item>@drawable/gunung_merapi</item>
        <item>@drawable/gunung_semeru</item>
        <item>@drawable/gunung_prau</item>
        <item>@drawable/gunung_merbabu</item>
        <item>@drawable/gunung_papandayan</item>
        <item>@drawable/gunung_kelimutu</item>
        <item>@drawable/gunung_sumbing</item>
        <item>@drawable/gunung_sindoro</item>
        <item>@drawable/gunung_kerinci</item>
        <item>@drawable/gunung_lawu</item>
        <item>@drawable/gunung_puncak_jaya</item>
    </integer-array>

    <string-array name="data_location_montains">
        <item>Pulau Lombok, Nusa Tenggara Barat</item>
        <item>Malang, Jawa Timur</item>
        <item>Bondowoso, Jawa Timur</item>
        <item>Yogyakarta dan Jawa Tengah</item>
        <item>Malang-Lumajang, Jawa Timur</item>
        <item>Wonosobo, Jawa Tengah</item>
        <item>Semarang-Magelang-Boyolali, Jawa Tengah</item>
        <item>Garut, Jawa Barat</item>
        <item>FLores, Nusa Tenggara Timur </item>
        <item>Magelang-Temanggung-Wonosobo, Jawa Tengah</item>
        <item>Temanggung, Jawa Tengah</item>
        <item>Jambi-Sumatra Barat</item>
        <item>Karanganyar, Jawa Tengah, Ngawi-Magetan, Jawa Timur</item>
        <item>Mimika, Papua</item>
    </string-array>


    <array name="data_open_time_mountains">
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
        <item>07.00-16.00 WIB</item>
    </array>

    <array name="data_rating_location_montains">
        <item>4.6</item>
        <item>4.6</item>
        <item>4.8</item>
        <item>4.7</item>
        <item>4.7</item>
        <item>4.6</item>
        <item>4.8</item>
        <item>4.8</item>
        <item>4.7</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.6</item>
        <item>4.8</item>
        <item>4.8</item>
    </array>

    <string-array name="data_overviews_montains">
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
    </string-array>

    <string-array name="data_reviews_montains">
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
    </string-array>


    <string-array name="data_name_beaches">
        <item>Pandawa Beach</item>
        <item>Senggigi Beach</item>
        <item>Seminyak Beach</item>
        <item>Balangan Beach</item>
        <item>Klayar Beach</item>
        <item>Kuta Beach</item>
        <item>Siung Beach</item>
        <item>Kelingking Beach</item>
        <item>Nglambor Beach</item>
        <item>Greenbowl Beach</item>
        <item>Plengkung Beach</item>
        <item>Teluk Penyu Beach</item>
    </string-array>

    <string-array name="data_name_temple">
        <item>Borobudur Temple</item>
        <item>Prambanan Temple</item>
        <item>Sewu Temple</item>
        <item>Ceto Temple</item>
        <item>Penataran Temple</item>
        <item>Besakih Temple</item>
        <item>Dieng Temple</item>
        <item>Gedong Songo Temple</item>
        <item>Gedong Songo Temple</item>
        <item>Plaosan Temple</item>
        <item>Cetho Temple</item>
        <item>Tikus Temple</item>
    </string-array>

    <string-array name="data_name_museum">
        <item>Angkut Museum</item>
        <item>National Museum of Indonesia</item>
        <item>Fatahillah Museum</item>
        <item>Blanco Renaissance Museum</item>
        <item>Ullen Sentalu Museum</item>
        <item>Aceh Tsunami Museum</item>
        <item>Siwalima Museum</item>
        <item>House of Sampoerna Museum</item>
        <item>Geology Museum</item>
        <item>Indonesian Record Museum</item>
    </string-array>


    <string-array name="data_location_top_trips">
        <item>Sumbing Mount</item>
        <item>Rinjani Mount</item>
        <item>Klayar Beach</item>
        <item>Kuta Beach</item>
        <item>Borobudur Temple</item>
        <item>Dieng Temple</item>
        <item>National Museum of Indonesia</item>
        <item>Angkut Museum</item>
    </string-array>

    <string-array name="data_category_top_trips">
        <item>Mountains</item>
        <item>Mountains</item>
        <item>Beaches</item>
        <item>Beaches</item>
        <item>Temple</item>
        <item>Temple</item>
        <item>Museum</item>
        <item>Museum</item>
    </string-array>


</resources>