<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="14dp"
    app:cardElevation="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_border_color="#333333"
                app:riv_corner_radius="20dp"
                app:riv_mutate_background="true"
                app:riv_oval="false"
                tools:src="@drawable/img_sample1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/margin12dp"
                android:background="@drawable/color_background_price"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:hint="@string/_120"
                    android:letterSpacing="0.09"
                    android:paddingStart="@dimen/margin12dp"
                    android:paddingTop="@dimen/margin4dp"
                    android:paddingEnd="@dimen/margin12dp"
                    android:paddingBottom="@dimen/margin4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/margin12sp" />
            </LinearLayout>
        </FrameLayout>


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin16dp"
            android:paddingEnd="@dimen/margin16dp"
            android:fontFamily="@font/poppins_semibold"
            android:hint="@string/banjir_kanal"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout" />

        <ImageButton
            android:id="@+id/ibFavorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/color_background_favorite_red"
            android:contentDescription="@string/image_favorite"
            android:src="@drawable/ic_favorite_red"
            app:layout_constraintBottom_toBottomOf="@+id/tvCategoryName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCategoryName" />


        <TextView
            android:id="@+id/tvCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin16dp"
            android:paddingEnd="@dimen/margin16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="@dimen/margin16dp"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/camp"
            android:textColor="@color/color_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>